updated home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -178,7 +178,7 @@
     <div id="modal">
         <div id="main">
             <div class="content">
-                <h1>Welcome</h1>
+                <h1>CCIQ Craft</h1>
                 <p>Thanks for installing Craft CMS!</p>
                 <p>You’re looking at the <code>index.html</code> template file located in your
                     <code>templates/</code> folder. Once you’re ready to start building out your site’s
